--- a/factory/02-table/01-3-calculate-expval-notations[fr].tex
+++ b/factory/02-table/01-3-calculate-expval-notations[fr].tex
@@ -25,16 +25,7 @@ Il faut noter que la clé \verb#com# sert juste à ajouter un court texte sur un
 	Si besoin utiliser séparément l'affichage par défaut avec \texttt{name = maloi} suivi d'un long texte puis enfin employer \texttt{disp = exp, reuse = maloi}.
 }.
 
-\begin{latexex-flat}
-\calcexpval[disp = all,
-            E    = Esp, X  = Y,
-            k    = i  , xk = y, pk = q,
-            com  = Le tableau précédent aboutit aux calculs suivants.,
-            ope  = \times]{
-    0      & 1   & 2   & 3    & 4    & 5   & 6   \\
-    0.2000 & 0.1 & 0.2 & 0.05 & 0.15 & 0.1 & 0.2
-}
-\end{latexex-flat}
+\inputlatexexflat{examples/expval-use-notation-basic.extra.tex}
 
 
 % ---------------------- %
@@ -45,32 +36,6 @@ Il faut noter que la clé \verb#com# sert juste à ajouter un court texte sur un
 Lors de la création d'une loi nommée via la clé \verb#name# les options textuelles, autre que le commentaire court, sont mémorisées.
 Ceci est très utile comme le montre le 1\ier{} affichage de l'exemple suivant tout en étant modifiable à tout moment comme dans le dernier affichage ci-après.
 
-\begin{latexex-flat}
-DÉFINITION CACHÉE.
-\calcexpval[name = option/texte/loi,
-            disp = none,
-            E    = Esp, X  = Y,
-            k    = i  , xk = y, pk = q,
-            ope  = \times]{
-    0      & 1   & 2   & 3    & 4    & 5   & 6   \\
-    0.2000 & 0.1 & 0.2 & 0.05 & 0.15 & 0.1 & 0.2
-}
-
-\bigskip
-
-RÉUTILISATION DIRECTE.
-\calcexpval[reuse = option/texte/loi,
-            disp  = all]{}
-
-\bigskip
-
-RÉUTILISATION AVEC DES OPTIONS MODIFIÉES (E, k et ope = .).
-\calcexpval[reuse = option/texte/loi,
-            disp  = all,
-            E     = E,
-            k     = k,
-            com   = Le tableau précédent aboutit aux calculs suivants.,
-            ope   = \cdot]{}
-\end{latexex-flat}
+\inputlatexexflat{examples/expval-use-notation-reuse.extra.tex}
 
 \end{document}
