--- a/factory/02-table/01-calculate-expval.sty
+++ b/factory/02-table/01-calculate-expval.sty
@@ -449,7 +449,7 @@
         \fi
     
 
-% Comment between the table and the calculus.
+% Comment between the calculus of the expected value.
         \iftnsproba@expval@key@Expval@show@comment
             \IfStrEq{\tnsproba@expval@key@com}{@}{}{
                 \tnsproba@expval@key@com
