--- a/factory/03-tree/00-showcase[fr].tex
+++ b/factory/03-tree/00-showcase[fr].tex
@@ -6,10 +6,11 @@
 
     \usepackage{01-basic}
     \usepackage{02-coment}
-    \usepackage{03-textofnodes}
-    \usepackage{04-frame}
-    \usepackage{05-focus-edge}
-    \usepackage{06-auto-num}
+    \usepackage{03-tag-level}
+    \usepackage{04-textofnodes}
+    \usepackage{05-frame}
+    \usepackage{06-focus-edge}
+    \usepackage{07-auto-num}
 \makeatother
 
 
