--- a/factory/00-intro/99-packages-used[fr].tex
+++ b/factory/00-intro/99-packages-used[fr].tex
@@ -11,7 +11,7 @@
 % List of packages - START
 \section{Packages utilisés}
 
-La roue ayant déjà été inventée, le package \verb#tnsproba# réutilise les packages suivants sans aucun scrupule.
+La roue ayant déjà été inventée, le package \verb#tnsproba# utilise les packages suivants sans aucun scrupule.
 
 \begin{multicols}{4}
     \begin{itemize}
