--- a/factory/02-table/01-2-calculate-expval-with-ref[fr].tex
+++ b/factory/02-table/01-2-calculate-expval-with-ref[fr].tex
@@ -19,21 +19,7 @@
 
 Rien de bien compliqué à utiliser comme le montre l'exemple suivant. Notez bien qu'il faut indiquer un argument vide à la macro \macro{calcexpval} lors de la réutilisation.
 
-\begin{latexex-flat}
-Voici ma loi de dingue.
-
-\calcexpval[name = maloidedingue]{
-    0      & 1   & 2   & 3    & 4    & 5   & 6   \\
-    0.2000 & 0.1 & 0.2 & 0.05 & 0.15 & 0.1 & 0.2
-}
-
-Je dis des choses, bla, bla...
-
-Et puis finalement j'indique le calcul de l'espérance.
-
-\calcexpval[disp  = exp,
-            reuse = maloidedingue]{}
-\end{latexex-flat}
+\inputlatexexflat{examples/expval-use-later-case-1.extra.tex}
 
 
 \begin{remark}
@@ -42,18 +28,7 @@ Et puis finalement j'indique le calcul de l'espérance.
 		Ceci permet d'utiliser des espaces de noms très pratiques à l'usage.
 	}.
 	
-\begin{latexex-flat}
-Définissons de façon cachée la loi... %
-\calcexpval[disp = none,
-            name = ma/loi/de/dingue]{
-    0      & 1   & 2   & 3    & 4    & 5   & 6   \\
-    0.2000 & 0.1 & 0.2 & 0.05 & 0.15 & 0.1 & 0.2
-}%
-Bla, bla... Affichons la loi.
-
-\calcexpval[disp  = table,
-            reuse = ma/loi/de/dingue]{}
-\end{latexex-flat}
+	\inputlatexexflat{examples/expval-use-later-case-2.extra.tex}
 \end{remark}
 
 
