--- a/factory/03-tree/07-auto-num[fr].tex
+++ b/factory/03-tree/07-auto-num[fr].tex
@@ -6,10 +6,11 @@
 
     \usepackage{01-basic}
     \usepackage{02-coment}
-    \usepackage{03-textofnodes}
-    \usepackage{04-frame}
-    \usepackage{05-focus-edge}
-    \usepackage{06-auto-num}
+    \usepackage{03-tag-level}
+    \usepackage{04-textofnodes}
+    \usepackage{05-frame}
+    \usepackage{06-focus-edge}
+    \usepackage{07-auto-num}
 \makeatother
 
 
@@ -67,22 +68,22 @@ Voici comment s'y prendre.
 		\medskip
 		
 		\item Aller d'abord au
-		      \kern.25em\fbox{1}\,\ier{}
+		      \kern.25em\fbox{1}\kern.4ex\ier{}
 		      \kern.15em
 		      noeud du niveau 1 qui ici est $A$.
 
 		\item Aller ensuite au
-		      \kern.55em\fbox{3}\,\ieme{}
+		      \kern.55em\fbox{3}\kern.4ex\ieme{}
 		      \kern.4em
 		      noeud du niveau 2 qui ici est $D$.
 
 		\item Aller après au
-		      \kern1.35em\fbox{2}\,\ieme{}
+		      \kern1.35em\fbox{2}\kern.4ex\ieme{}
 		      \kern.4em
 		      noeud du niveau 3 qui ici est $F$.
 		
 		\item Aller enfin au
-		      \kern1.55em\fbox{1}\,\ier{}
+		      \kern1.55em\fbox{1}\kern.4ex\ier{}
 		      \kern.15em
 		      noeud du niveau 4 qui ici est $G$.
 		      
